--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Hilal Yağmuru</title>
+  <title>AYBÜKE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -68,14 +68,14 @@
 
 
 <!-- Doğum Günü Mesajı -->
-<div class="center-text" onclick="startExperience()">DOĞUM GÜNÜN KUTLU OLSUN AYBÜKE</div>
+<div class="center-text" onclick="startExperience()">DOĞUM GÜNÜN KUTLU OLSUN AYBÜKEEEEE</div>
 
 <!-- Konfeti Kütüphanesi -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <!-- YouTube Video Gömme -->
 <iframe id="youtube-player" class="hidden" width="1" height="1" 
-  src="https://www.youtube.com/watch?v=GSeyly3KdU8&ab_channel=GENCERSAVASBANDOSU" 
+  src="https://www.youtube.com/embed/3dYuhGpkJ3o?si=wVqKQz5B8x7jcZfP" 
   frameborder="0" allow="autoplay" allowfullscreen></iframe>
 
 <script>
