--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
 <!-- Konfeti Kütüphanesi -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<!-- YouTube Video Gömme -->
+<audio id="youtube-player" class="hidden" autoplay src="hb.mp3" ></audio>
+
+<!-- YouTube Video Gömme
 <iframe id="youtube-player" class="hidden" width="1" height="1" 
-  src="https://www.youtube.com/embed/3dYuhGpkJ3o?si=wVqKQz5B8x7jcZfP" 
-  frameborder="0" allow="autoplay" allowfullscreen></iframe>
+  src="hb.mp3" 
+  frameborder="0" allow="autoplay" allowfullscreen "></iframe> -->
 
 <script>
 var clickCount = 0;
