--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 <!-- Konfeti Kütüphanesi -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<audio id="youtube-player" class="hidden" autoplay src="hb.mp3" ></audio>
+<audio id="youtube-player" class="hidden" allow="autoplay">
+<source src="https://oguzhanaksann.github.io/adogumgunu/hb.mp3" type="audio/mpeg" >
+</audio>
 
 <!-- YouTube Video Gömme
 <iframe id="youtube-player" class="hidden" width="1" height="1" 
