--- a/index.html
+++ b/index.html
@@ -16,30 +16,6 @@
       height: 100vh;
     }
 
-    .hilal {
-      position: absolute;
-      width: 6vmin;
-      height: 6vmin;
-      background-image: url('https://emojicdn.elk.sh/🌙'); /* EmojiCDN'den moon emoji */
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      animation: float 5s infinite ease-in-out, sway 3s infinite ease-in-out;
-      filter: drop-shadow(0 0 8px white);
-      opacity: 0.8;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-2vmin) rotate(5deg); }
-      100% { transform: translateY(0) rotate(0deg); }
-    }
-
-    @keyframes sway {
-      0%, 100% { transform: translateX(0); }
-      50% { transform: translateX(1vmin); }
-    }
-
     .center-text {
       position: absolute;
       top: 50%;
@@ -58,14 +34,9 @@
       from { text-shadow: 0 0 15px #fff, 0 0 30px #0ff; }
       to { text-shadow: 0 0 35px #fff, 0 0 60px #0ff; }
     }
-
-    .hidden {
-      display: none;
-    }
   </style>
 </head>
 <body>
-
 
 <!-- Doğum Günü Mesajı -->
 <div class="center-text" onclick="startExperience()">DOĞUM GÜNÜN KUTLU OLSUN AYBÜKEEEEE</div>
@@ -73,26 +44,24 @@
 <!-- Konfeti Kütüphanesi -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<audio controls>
-    <source src="https://oguzhanaksann.github.io/adogumgunu/hb.mp3" type="audio/mpeg">
+<!-- Müzik Dosyası -->
+<audio id="bg-music" preload="auto">
+  <source src="https://oguzhanaksann.github.io/adogumgunu/hb.mp3" type="audio/mpeg">
 </audio>
-<!-- YouTube Video Gömme
-<iframe id="youtube-player" class="hidden" width="1" height="1" 
-  src="hb.mp3" 
-  frameborder="0" allow="autoplay" allowfullscreen "></iframe> -->
 
 <script>
-var clickCount = 0;
+  let isPlaying = false;
+
   function startExperience() {
-  if(clickCount < 1){
-  clickCount++;
-    var youtubePlayer = document.getElementById('youtube-player');
+    const music = document.getElementById('bg-music');
 
-    // YouTube API üzerinden müzik oynatma
-    youtubePlayer.classList.remove('hidden'); // Gömülü çalar görünür hale getirilir
-    youtubePlayer.src += "&autoplay=1"; // Müzik otomatik oynatılır
+    if (!isPlaying) {
+      music.play().catch(error => {
+        console.log('Müzik otomatik oynatılamadı:', error);
+      });
+      isPlaying = true;
+    }
 
-  }
     fireConfetti();
   }
 
@@ -104,15 +73,6 @@ var clickCount = 0;
       shapes: ['star'],
       colors: ['#00ffff', '#ffffff', '#ff69b4']
     });
-  }
-
-  for (let i = 0; i < 100; i++) {
-    const hilal = document.createElement('div');
-    hilal.classList.add('hilal');
-    hilal.style.top = `${Math.random() * 90}vh`;
-    hilal.style.left = `${Math.random() * 90}vw`;
-    hilal.style.animationDelay = `${Math.random() * 5}s`;
-    document.body.appendChild(hilal);
   }
 </script>
 
