--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       position: absolute;
       width: 6vmin;
       height: 6vmin;
-      background-image: url('https://emojicdn.elk.sh/🌙'); /* EmojiCDN'den moon emoji */
+      background-image: url('https://emojicdn.elk.sh/✨'); /* EmojiCDN'den moon emoji */
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -67,10 +67,10 @@
 <body>
 
 <!-- Doğum Günü Mesajı -->
-<div class="center-text" onclick="startExperience()">DOĞUM GÜNÜN KUTLU OLSUN AYBÜKEEEEE</div>
+<div class="center-text" onclick="startExperience()">MUTLU YILLAR SENAAAAA</div>
 
 <!-- Konfeti Kütüphanesi -->
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tsparticles-preset-confetti/1.43.0/tsparticles.preset.confetti.min.js"></script>
 
 <!-- Müzik Dosyası -->
 <audio id="bg-music" preload="auto">
